fix wrong paths

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <meta name="apple-mobile-web-app-title" content="VIBBIDI_APPLE" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="shortcut icon" href="/favicon.png">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" sizes="192x192" href="/images/icons/icon-192x192.png" />
+    <link rel="shortcut icon" href="./favicon.png">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="apple-touch-icon" sizes="192x192" href="./images/icons/icon-192x192.png" />
 </head>
 
 <body>
